# your_news_bot

./: .example.env  README.md  instructions.txt  pyproject.toml  uhatikus.session
src/: assistant.py  main.py  utils.py
